# digital-twin-gazebo

./: PROGRESS.md  README.md  init_repo.sh
digital_twin_ws/src/digital_twin/: package.xml  setup.py
digital_twin_ws/src/digital_twin/digital_twin/: __init__.py  detect_objects.py  joint_controller.py  sensor_logger.py
digital_twin_ws/src/digital_twin/launch/: bringup.launch.py
digital_twin_ws/src/digital_twin/models/humanoid_robot/: model.sdf
digital_twin_ws/src/digital_twin/worlds/: home_environment.sdf
scripts/: generate_synthetic.py  setup.sh  train_yolo.py
